--- a/style/style.css
+++ b/style/style.css
@@ -4,15 +4,39 @@
 }
 
 html, body {
-    height: 100%;
     width: 100%;
 }
 
-i {
-    position: relative;
+body {
+    display: grid;
+    grid-template-columns: 4fr 10fr;
 }
 
-#pole {
-    height: 100%;
+.adminPanel {
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-gap: 2px;
+}
+
+.bacter {
+    background-color: limegreen;
+    display: block;
     width: 100%;
+    height: 100%;
+}
+
+.eat {
+    width: 100%;
+    height: 100%;
+    background-color: orange;
+}
+
+#petri {
+    width: 750px;
+    height: 750px;
+    display: grid;
+    grid-template-columns: repeat(100, 1fr);
+    grid-template-rows: repeat(100, 1fr);
+    grid-gap: 1px;
+    background-color: lightblue;
 }
