--- a/style/style.css
+++ b/style/style.css
@@ -1,42 +1,43 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-html, body {
-    width: 100%;
+html,
+body {
+  width: 100%;
 }
 
 body {
-    display: grid;
-    grid-template-columns: 4fr 10fr;
+  display: grid;
+  grid-template-columns: 4fr 10fr;
 }
 
 .adminPanel {
-    display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    grid-gap: 2px;
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  grid-gap: 2px;
 }
 
 .bacter {
-    background-color: limegreen;
-    display: block;
-    width: 100%;
-    height: 100%;
+  background-color: limegreen;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .eat {
-    width: 100%;
-    height: 100%;
-    background-color: orange;
+  width: 100%;
+  height: 100%;
+  background-color: orange;
 }
 
 #petri {
-    width: 750px;
-    height: 750px;
-    display: grid;
-    grid-template-columns: repeat(100, 1fr);
-    grid-template-rows: repeat(100, 1fr);
-    grid-gap: 1px;
-    background-color: lightblue;
+  width: 750px;
+  height: 750px;
+  display: grid;
+  grid-template-columns: repeat(100, 1fr);
+  grid-template-rows: repeat(100, 1fr);
+  grid-gap: 1px;
+  background-color: lightblue;
 }
